--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
 *.class
 *.log
+
+.DS_Store
+
+/out
+target
+project/target
+
+# Created by Jayesh J.
+
+*.class
+*.log
+*.iml
+*.ipr
+*.iws
+.idea
+out
+.cache/
+.history/
+.lib/
+dist/*
+target/
+bin/
+libexec/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+logs/
+project/*-shim.sbt
+project/project/
+project/target/
+target/
+.scala_dependencies
+.worksheet
