--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ target/
 .scala_dependencies
 .worksheet
 *spark.log
+*/cleaned_data/*
+*/spark_warehouse/*
+*/data/*
+*/saved_model/*
+*/predictions/*
+*/__pycache__/*
+*/spark-warehouse/*
